--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,10 +34,10 @@ itertools = "0.10.0"
 bincode = "1.3.1"
 serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.9"
-blstrs = { default-features = true, version = "0.4.2", optional = true }
+blstrs = "0.4.2"
 pairing = "0.21"
 yastl = "0.1.2"
-ec-gpu = { version = "0.1.0", optional = true }
+ec-gpu = { version = "0.1.0" }
 ec-gpu-gen = { version = "0.2.1", default-features = false, features = ["fft", "multiexp"] }
 
 fs2 = { version = "0.4.3", optional = true }
@@ -54,12 +54,12 @@ subtle = "2.2.1"
 temp-env = "0.2.0"
 
 [features]
-default = ["groth16", "ec-gpu", "memmap", "blstrs/default" ]
+default = ["groth16", "memmap" ]
 cuda = ["ec-gpu-gen/cuda", "fs2", "blstrs/gpu"]
 opencl = ["ec-gpu-gen/opencl", "fs2", "blstrs/gpu"]
 groth16 = []
 # Wasm friendly build. Disable default features for this.
-wasm = [ "getrandom/js", "blstrs", "groth16" ]
+wasm = [ "getrandom/js", "groth16" ]
 
 # This feature disables/modifies long running tests to make the suitable for code coverage
 # reporting
