--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ bincode = "1.3.1"
 serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.10.6"
 pairing = "0.23"
-blstrs = { version = "0.7.0", features = ["__private_bench"] }
+blstrs = { git = "https://github.com/lurk-lab/blstrs.git", branch = "dev", features = ["__private_bench"] }
 ec-gpu = { git = "https://github.com/lurk-lab/ec-gpu.git", branch = "dev" }
 ec-gpu-gen = { git = "https://github.com/lurk-lab/ec-gpu.git", branch = "dev" }
 
@@ -88,6 +88,6 @@ members = [
 ]
 
 [build-dependencies]
-blstrs = { version = "0.7.0", features = ["__private_bench"] }
+blstrs = { git = "https://github.com/lurk-lab/blstrs.git", branch = "dev", features = ["__private_bench"] }
 ec-gpu-gen = { git = "https://github.com/lurk-lab/ec-gpu.git", branch = "dev" }
 rustversion = "1.0.6"
