--- a/verifier-bench/Cargo.toml
+++ b/verifier-bench/Cargo.toml
@@ -14,7 +14,7 @@ pretty_env_logger = "0.4.0"
 rand = "0.8"
 bincode = "1.3.1"
 pairing = "0.23"
-blstrs = "0.7.0"
+blstrs = { git="https://github.com/lurk-lab/blstrs.git", branch="dev"
 
 [features]
 default = ["groth16"]
